[package]
name = "strck"
version = "0.1.0"
authors = ["Quinn Okabayashi <quinnokabayashi@gmail.com>"]
edition = "2021"
description = "Checked owned and borrowed strings"
keywords = ["text", "ident", "identifier", "validate"]
categories = ["rust-patterns", "memory-management"]
license = "MIT"
repository = "https://github.com/QnnOkabayashi/strck"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1.0.82"
smol_str = "0.1.23"
strck_ident = { version = "=0.1.0", path = "../strck_ident" }

[package.metadata.docs.rs]
all-features = true
