[package]
name = "strck"
version = "0.1.1"
authors = ["Quinn Okabayashi <quinnokabayashi@gmail.com>"]
edition = "2021"
description = "Checked owned and borrowed strings"
keywords = ["text", "ident", "identifier", "validate"]
categories = ["rust-patterns", "memory-management"]
license = "MIT"
repository = "https://github.com/QnnOkabayashi/strck"

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = "0.1"
strck_ident = { path = "../strck_ident", features = ["rust"] }

[package.metadata.docs.rs]
all-features = true
