[package]
name = "strck_ident"
version = "1.0.0"
authors = ["Quinn Okabayashi <quinnokabayashi@gmail.com>"]
edition = "2021"
description = "Checked owned and borrowed Unicode-based identifiers"
keywords = ["text", "ident", "identifier", "validate", "unicode"]
categories = ["rust-patterns", "memory-management"]
license = "MIT"
repository = "https://github.com/QnnOkabayashi/strck"

[features]
serde = ["strck/serde"]

[dependencies]
strck = { version = "1.0.0", path = "../strck", features = ["ident"]}

[dev-dependencies]
strck_ident = { path = ".", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
